# codebase-deep-analyzer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/commands/: analyze.rs  config.rs  mod.rs  verify.rs
src/core/: analyzer.rs  discovery.rs  mod.rs  parser.rs
src/llm/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src/output/: json.rs  markdown.rs  mod.rs
