[package]
name = "codebase-deep-analyzer"
version = "0.1.0"
edition = "2021"
description = "A systematic codebase exploration tool that thoroughly documents and understands any codebase"
license = "MIT"
repository = "https://github.com/Bentlybro/codebase-deep-analyzer"
keywords = ["codebase", "analyzer", "documentation", "llm", "ai"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "cda"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for LLM APIs
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File traversal
walkdir = "2"
ignore = "0.4"  # Respects .gitignore

# Code parsing
tree-sitter = "0.25"

# Progress bars and CLI output
indicatif = "0.17"
console = "0.15"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async streams for LLM streaming
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"

# Config file support
directories = "6"
toml = "0.8"

# Memory management
libc = "0.2"
tree-sitter-rust = "0.24.0"
streaming-iterator = "0.1.9"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
